fix: folder, team endpoint
